// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when auth token is stale > allows re-authentication after expired token and proceeds normally > auth-re-authenticated 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Select agent to set up                                               Todo (2/5)

 Your agent will get Confidence skills for flag management,           ● Check system
 warehouse setup, migrations, and onboarding — so it can help         ● Sign in to Confidence
 without searching the docs.                                          ▶ Set up your agent
                                                                      ○ Connect tools
 ◆ Cursor and Codex require full file system access to run            ○ Onboard project
 onboarding.


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Which CLI agent would you like to use?

 ❯ Claude Code
   Cursor
   Codex

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when auth token is stale > allows signing in after failed refresh and proceeds normally > auth-refresh-failed-then-signed-in 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Select agent to set up                                               Todo (2/5)

 Your agent will get Confidence skills for flag management,           ● Check system
 warehouse setup, migrations, and onboarding — so it can help         ● Sign in to Confidence
 without searching the docs.                                          ▶ Set up your agent
                                                                      ○ Connect tools
 ◆ Cursor and Codex require full file system access to run            ○ Onboard project
 onboarding.


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Which CLI agent would you like to use?

 ❯ Claude Code
   Cursor
   Codex

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when auth token is stale > falls back to sign-in when choosing existing account and refresh fails > auth-refresh-failed 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Sign in to Confidence                                                Todo (1/5)

 Sign in so the wizard can create flags and set up your project.      ● Check system
                                                                      ▶ Sign in to Confidence
 Your session seems to be expired. Please sign in again.              ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 We'll open your browser to sign in. Continue?

 ❯ Sign in to a Confidence account

 enter confirm                                                                               vX.Y.Z"
`;

exports[`when auth token is stale > prompts user to sign in again instead of using the expired token > auth-expired 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Sign in to Confidence                                                Todo (1/5)

 Sign in so the wizard can create flags and set up your project.      ● Check system
                                                                      ▶ Sign in to Confidence
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 We'll open your browser to sign in. Continue?

 ❯ Sign in to a Confidence account

 enter confirm                                                                               vX.Y.Z"
`;

exports[`when auth token is stale > refreshes and authenticates when choosing existing account > auth-refreshed 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Select agent to set up                                               Todo (2/5)

 Your agent will get Confidence skills for flag management,           ● Check system
 warehouse setup, migrations, and onboarding — so it can help         ● Sign in to Confidence
 without searching the docs.                                          ▶ Set up your agent
                                                                      ○ Connect tools
 ◆ Cursor and Codex require full file system access to run            ○ Onboard project
 onboarding.


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Which CLI agent would you like to use?

 ❯ Claude Code
   Cursor
   Codex

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when auth token is stale > shows "Use existing account" when the token is still valid > auth-existing 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Sign in to Confidence                                                Todo (1/5)

 Sign in so the wizard can create flags and set up your project.      ● Check system
                                                                      ▶ Sign in to Confidence
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Found existing account (test@example.com). What would you like to do?

 ❯ Use existing account
   Sign in to a different account

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;

exports[`when auth token is stale > treats a malformed token as invalid and prompts sign-in > auth-malformed 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Sign in to Confidence                                                Todo (1/5)

 Sign in so the wizard can create flags and set up your project.      ● Check system
                                                                      ▶ Sign in to Confidence
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 We'll open your browser to sign in. Continue?

 ❯ Sign in to a Confidence account

 enter confirm                                                                               vX.Y.Z"
`;

exports[`when auth token is stale > treats a near-expiry token as valid > auth-near-expiry 1`] = `
" Confidence by Spotify                                              https://confidence.spotify.com/

 Sign in to Confidence                                                Todo (1/5)

 Sign in so the wizard can create flags and set up your project.      ● Check system
                                                                      ▶ Sign in to Confidence
                                                                      ○ Set up your agent
                                                                      ○ Connect tools
                                                                      ○ Onboard project


 ──────────────────────────────────────────────────────────────────────────────────────────────────
 Found existing account (test@example.com). What would you like to do?

 ❯ Use existing account
   Sign in to a different account

 ↑↓ navigate   enter confirm                                                                 vX.Y.Z"
`;
